MetabaseK8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase-service
spec:
  selector:
    app: metabase
  ports:
  - port: 3000
    targetPort: 3000
  type: LoadBalancer
