MetabaseK8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabse-ingress
  labels:
    name: metabse-ingress

spec:
  rules:
  - host: www.dalabs.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: metabase
            port: 
              number: 3000

  - host: dalabs.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: metabase
            port: 
              number: 3000
